--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
         <h1>Image Upload </h1>
         <h1>MILESTONE 2</h1>
         <h1>MILESTONE 3</h1>
+        <h1>MILESTONE 4</h1>
         <%= typeof msg != 'undefined' ? msg : '' %>
         <form action="/upload" method = "POST" enctype="multipart/form-data">
             <div class="file-field input-field">
